--- a/src/app/landing-page/content/services/services.component.html
+++ b/src/app/landing-page/content/services/services.component.html
@@ -1,68 +1,102 @@
-<div class="container">
-  <div class="row">
-    <h1 class="h1-responsive section-title"><span class="indigo-text">|</span> Servicios <span class="indigo-text">|</span></h1>
+<div class="mdl-grid">
+  <div class="mdl-cell mdl-cell--12-col">
+    <h2 class="section-title text-center"><span class="mdl-color-text--indigo">|</span> Servicios <span class="mdl-color-text--indigo">|</span></h2>
   </div>
-  <div class="row">
-    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-      <div class="box wow fadeInLeftBig" data-wow-duration="1.5s">
-        <div class="box-icon">
-          <span class="fa fa-4x fa-truck"></span>
-        </div>
-        <div class="info">
-          <h4 class="text-center">Title</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti atque, tenetur quam aspernatur corporis at explicabo
-            nulla dolore necessitatibus doloremque exercitationem sequi dolorem architecto perferendis quas aperiam debitis
-            dolor soluta!</p>
-          <a href="" class="btn waves-effect waves-light">Link</a>
-        </div>
+  <div class="mdl-cell mdl-cell--8-col mdl-cell--2-offset-desktop">
+    <h5 class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti atque, tenetur quam aspernatur corporis at explicabo nulla dolore necessitatibus doloremque exercitationem sequi dolorem architecto perferendis quas aperiam debitis dolor soluta!</h5>
+  </div>
+  <div class="mdl-cell mdl-cell--3-col-desktop mdl-cell--4 mdl-cell--2-offset-desktop">
+    <div class="box">
+      <div class="box-icon mdl-color--indigo">
+        <i class="material-icons md-64">build</i>
       </div>
-    </div>
-
-    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-      <div class="box wow fadeInRightBig" data-wow-duration="1.5s">
-        <div class="box-icon">
-          <span class="fa fa-4x fa-linode"></span>
-        </div>
-        <div class="info">
-          <h4 class="text-center">Title</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti atque, tenetur quam aspernatur corporis at explicabo
-            nulla dolore necessitatibus doloremque exercitationem sequi dolorem architecto perferendis quas aperiam debitis
-            dolor soluta!
-          </p>
-          <a href="" class="btn waves-effect waves-light">Link</a>
+      <div class="info">
+        <h4 class="text-center">Title</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti atque, tenetur quam aspernatur corporis at explicabo
+          nulla dolore necessitatibus doloremque exercitationem sequi dolorem architecto perferendis quas aperiam debitis
+          dolor soluta!</p>
+        <div class="mdl-cell mdl-cell--12-col text-center">
+          <button mdl-button mdl-button-type="raised" mdl-colored="accent" mdl-ripple>Link</button>
         </div>
       </div>
     </div>
   </div>
-
-  <div class="row">
-    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-      <div class="box wow fadeInLeftBig" data-wow-duration="1.5s">
-        <div class="box-icon">
-          <span class="fa fa-4x fa-grav"></span>
-        </div>
-        <div class="info">
-          <h4 class="text-center">Title</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti atque, tenetur quam aspernatur corporis at explicabo
-            nulla dolore necessitatibus doloremque exercitationem sequi dolorem architecto perferendis quas aperiam debitis
-            dolor soluta!</p>
-          <a href="" class="btn waves-effect waves-light">Link</a>
+  <div class="mdl-cell mdl-cell--3-col-desktop mdl-cell--4">
+    <div class="box">
+      <div class="box-icon mdl-color--indigo">
+        <i class="material-icons md-64">grade</i>
+      </div>
+      <div class="info">
+        <h4 class="text-center">Title</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti atque, tenetur quam aspernatur corporis at explicabo
+          nulla dolore necessitatibus doloremque exercitationem sequi dolorem architecto perferendis quas aperiam debitis
+          dolor soluta!</p>
+        <div class="mdl-cell mdl-cell--12-col" style="text-align: center;">
+          <button mdl-button mdl-button-type="raised" mdl-colored="accent" mdl-ripple>Link</button>
         </div>
       </div>
     </div>
-
-    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-      <div class="box wow fadeInRightBig" data-wow-duration="1.5s">
-        <div class="box-icon">
-          <span class="fa fa-4x fa-handshake-o"></span>
+  </div>
+  <div class="mdl-cell mdl-cell--3-col-desktop mdl-cell--4">
+    <div class="box">
+      <div class="box-icon mdl-color--indigo">
+        <i class="material-icons md-64">loyalty</i>
+      </div>
+      <div class="info">
+        <h4 class="text-center">Title</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti atque, tenetur quam aspernatur corporis at explicabo
+          nulla dolore necessitatibus doloremque exercitationem sequi dolorem architecto perferendis quas aperiam debitis
+          dolor soluta!</p>
+        <div class="mdl-cell mdl-cell--12-col" style="text-align: center;">
+          <button mdl-button mdl-button-type="raised" mdl-colored="accent" mdl-ripple>Link</button>
         </div>
-        <div class="info">
-          <h4 class="text-center">Title</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti atque, tenetur quam aspernatur corporis at explicabo
-            nulla dolore necessitatibus doloremque exercitationem sequi dolorem architecto perferendis quas aperiam debitis
-            dolor soluta!
-          </p>
-          <a href="" class="btn waves-effect waves-light">Link</a>
+      </div>
+    </div>
+  </div>
+  <div class="mdl-cell mdl-cell--3-col-desktop mdl-cell--4 mdl-cell--2-offset-desktop">
+    <div class="box">
+      <div class="box-icon mdl-color--indigo">
+        <i class="material-icons md-64">query_builder</i>
+      </div>
+      <div class="info">
+        <h4 class="text-center">Title</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti atque, tenetur quam aspernatur corporis at explicabo
+          nulla dolore necessitatibus doloremque exercitationem sequi dolorem architecto perferendis quas aperiam debitis
+          dolor soluta!</p>
+        <div class="mdl-cell mdl-cell--12-col" style="text-align: center;">
+          <button mdl-button mdl-button-type="raised" mdl-colored="accent" mdl-ripple>Link</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="mdl-cell mdl-cell--3-col-desktop mdl-cell--4">
+    <div class="box">
+      <div class="box-icon mdl-color--indigo">
+        <i class="material-icons md-64">store</i>
+      </div>
+      <div class="info">
+        <h4 class="text-center">Title</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti atque, tenetur quam aspernatur corporis at explicabo
+          nulla dolore necessitatibus doloremque exercitationem sequi dolorem architecto perferendis quas aperiam debitis
+          dolor soluta!</p>
+        <div class="mdl-cell mdl-cell--12-col" style="text-align: center;">
+          <button mdl-button mdl-button-type="raised" mdl-colored="accent" mdl-ripple>Link</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="mdl-cell mdl-cell--3-col-desktop mdl-cell--4">
+    <div class="box">
+      <div class="box-icon mdl-color--indigo">
+        <i class="material-icons md-64">face</i>
+      </div>
+      <div class="info">
+        <h4 class="text-center">Title</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti atque, tenetur quam aspernatur corporis at explicabo
+          nulla dolore necessitatibus doloremque exercitationem sequi dolorem architecto perferendis quas aperiam debitis
+          dolor soluta!</p>
+        <div class="mdl-cell mdl-cell--12-col" style="text-align: center;">
+          <button mdl-button mdl-button-type="raised" mdl-colored="accent" mdl-ripple>Link</button>
         </div>
       </div>
     </div>
