--- a/src/app/landing-page/content/about-us/about-us.component.html
+++ b/src/app/landing-page/content/about-us/about-us.component.html
@@ -1,17 +1,16 @@
-<div class="container">
-  <div class="row">
-    <h1 class="h1-responsive section-title"><span class="indigo-text">|</span> Conócenos <span class="indigo-text">|</span></h1>
+<div class="mdl-grid">
+  <div class="mdl-cell mdl-cell--12-col">
+    <h2 class="section-title text-center"><span class="mdl-color-text--indigo">|</span> Conócenos <span class="mdl-color-text--indigo">|</span></h2>
   </div>
-  <div class="row">
-    <p>
+  <div class="mdl-cell mdl-cell--12-col">
+    <h5 class="text-center">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
 Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
 dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
 non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-    </p>
+    </h5>
   </div>
-  <div class="row">
-    <div class="col-md-4 col-xs-12">
+    <div class="mdl-cell mdl-cell--3-col-desktop mdl-cell--4 mdl-cell--2-offset-desktop">
       <figure class="profile-card">
         <div class="profile-image"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample47.jpg" alt="sample47" /></div>
         <figcaption>
@@ -25,7 +24,7 @@ non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
         </figcaption>
       </figure>
     </div>
-    <div class="col-md-4 col-xs-12">
+    <div class="mdl-cell mdl-cell--3-col-desktop mdl-cell--4">
       <figure class="profile-card">
         <div class="profile-image"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample83.jpg" alt="sample83" /></div>
         <figcaption>
@@ -39,7 +38,7 @@ non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
         </figcaption>
       </figure>
     </div>
-    <div class="col-md-4 col-xs-12">
+    <div class="mdl-cell mdl-cell--3-col-desktop mdl-cell--4">
       <figure class="profile-card">
         <div class="profile-image"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample70.jpg" alt="sample70" /></div>
         <figcaption>
@@ -53,49 +52,49 @@ non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
         </figcaption>
       </figure>
     </div>
-  </div>
-  <div class="row">
-    <div class="col-md-4 col-xs-12">
+    <div class="mdl-cell mdl-cell--3-col-desktop mdl-cell--4 mdl-cell--2-offset-desktop">
       <figure class="profile-card">
         <div class="profile-image"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample47.jpg" alt="sample47" /></div>
         <figcaption>
           <h3>Fleece Marigold</h3>
           <h4>Founder</h4>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
-          <div class="icons"><a href="#"><i class="ion-social-facebook"></i></a>
+          <div class="icons">
+            <a href="#"><i class="ion-social-facebook"></i></a>
             <a href="#"> <i class="ion-social-twitter"></i></a>
             <a href="#"> <i class="ion-social-tumblr"></i></a>
           </div>
         </figcaption>
       </figure>
     </div>
-    <div class="col-md-4 col-xs-12">
+    <div class="mdl-cell mdl-cell--3-col-desktop mdl-cell--4">
       <figure class="profile-card">
         <div class="profile-image"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample83.jpg" alt="sample83" /></div>
         <figcaption>
           <h3>Norman Gordon</h3>
           <h4>Web Designer</h4>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
-          <div class="icons"><a href="#"><i class="ion-social-facebook"></i></a>
+          <div class="icons">
+            <a href="#"><i class="ion-social-facebook"></i></a>
             <a href="#"> <i class="ion-social-twitter"></i></a>
             <a href="#"> <i class="ion-social-tumblr"></i></a>
           </div>
         </figcaption>
       </figure>
     </div>
-    <div class="col-md-4 col-xs-12">
+    <div class="mdl-cell mdl-cell--3-col-desktop mdl-cell--4">
       <figure class="profile-card">
         <div class="profile-image"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample70.jpg" alt="sample70" /></div>
         <figcaption>
           <h3>Ruby Von Rails</h3>
           <h4>Public Relations</h4>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
-          <div class="icons"><a href="#"><i class="ion-social-facebook"></i></a>
+          <div class="icons">
+            <a href="#"><i class="ion-social-facebook"></i></a>
             <a href="#"> <i class="ion-social-twitter"></i></a>
             <a href="#"> <i class="ion-social-tumblr"></i></a>
           </div>
         </figcaption>
       </figure>
     </div>
-  </div>
 </div>
