--- a/src/app/landing-page/content/carousel/carousel.component.scss
+++ b/src/app/landing-page/content/carousel/carousel.component.scss
@@ -1,34 +1,6 @@
 @import 'src/assets/sass/variables';
-.carousel,
-.carousel-item,
-.active,
-.carousel-inner {
-  height: 100%;
-}
 
-.carousel {
-  z-index: 1;
-}
-
-
-/*Caption*/
-
-.flex-center {
-  color: #fff;
-}
-
-@media (min-width: 776px) {
-  .carousel .view {
-    ul li {
-      display: inline;
-    }
-    .full-bg-img ul li .flex-item {
-      margin-bottom: 1.5rem;
-    }
-  }
-}
-
-.carousel-item { 
+.swiper-slide { 
   &#slide-1 {
     background-image: url('../../../../assets/img/carousel/slide1.jpg');
   }
@@ -40,4 +12,33 @@
   }
   background-repeat: no-repeat;
   background-size: cover;
+  height: 100%;
+  width: 100%;
+  opacity: 0.7;
+  text-align: center;
+  font-size: 18px;
+  color: #FFF;
+  /* Center slide text vertically */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
+
+swiper{
+  height: 100vh;
+  width: 100%;
+  background-color: rgb(0,0,0);
+}
+
+button {
+  margin-right: 5px;
 }
