--- a/src/app/landing-page/content/contact/contact.component.html
+++ b/src/app/landing-page/content/contact/contact.component.html
@@ -1,97 +1,82 @@
-<div class="container">
-  	<div class="row">
-    	<h1 class="h1-responsive section-title"><span class="indigo-text">|</span> Contactanos <span class="indigo-text">|</span></h1>
-  	</div>
+<div class="mdl-grid">
+  	<div class="mdl-cell mdl-cell--10-col mdl-cell--1-offset">
+    	<h2 class="text-center section-title"><span class="indigo-text">|</span> Contacto <span class="indigo-text">|</span></h2>
+		<div class="mdl-grid">
+			<div class="mdl-cell mdl-cell--8-col">
+				<form novalidate [formGroup] = "form"> 
+					<p>
+						<i class="material-icons md-36 mdl-color-text--indigo">account_circle</i>
+						<mdl-textfield
+							label="Nombre y apellido"
+							name="name"
+							type="text"
+							formControlName="name"
+							floating-label
+							pattern="[a-zA-Z]*"
+							error-msg="Por favor ingresa un nombre válido">
+						</mdl-textfield>
+					</p>
 
-  	<div class="row">
-  	<!-- Parte izquierda -->
-    <div class="col-md-9">
-      <div class="box wow fadeInLeftBig" data-wow-duration="1.5s">
-	     	<h3>Danos tus datos</h3>
-				<hr>
-			
-				<form novalidate [formGroup] = "form" > 
-
-	      	<!-- Campo del nombre y apellido -->
-	      	<div class="form-group">
-		    		<div class="md-form">
-							<i class="fa fa-user prefix"></i>
-							<input type="text" id="name" class="form-control" formControlName="name">
-							<label for="name" class="">Nombre y apellido</label>
-
-							<div *ngIf = "form.controls.name.errors && form.controls.name.touched">
-								<div *ngIf = "form.controls.name.errors.required" class="alert alert-danger">
-									El campo nombre y apellido es requerido
-								</div>
-								<div *ngIf = "form.controls.name.errors.minlength" class="alert alert-danger">
-									El campo requiere minimo 3 caracteres
-								</div>
-							</div>
-			 			</div>
-		 			</div>
-
-					<!-- Campo del correo -->
-					<div class="form-group">
-						<div class="md-form">
-							<i class="fa fa-envelope prefix"></i>
-							<input type="text" id="email" class="form-control" formControlName="email">
-							<label for="email">Correo</label>
-							<div *ngIf = "form.controls.email.errors && form.controls.email.touched">
-								<div *ngIf = "form.controls.email.errors.required"  class="alert alert-danger">
-									El campo correo es requerido
-								</div>
-								<div *ngIf=" form.controls.email.errors.pattern" class="alert alert-danger"> 
-										El correo no es valido
-								</div>
-							</div>
+					<div *ngIf = "form.controls.name.errors && form.controls.name.touched">
+						<div *ngIf = "form.controls.name.errors.required" class="mdl-color-text--red">
+							El campo nombre y apellido es requerido
 						</div>
 					</div>
 
-			
-					<!-- Campo del número de celular -->
-					<div class="form-group">
-						<div class="md-form">
-							<i class="fa fa-phone prefix"></i>
-							<input type="number" id="number" class="form-control" formControlName="number">
-							<label for="number">Número de celular</label>
-							<div *ngIf = "form.controls.number.errors && form.controls.number.touched">
-								<div *ngIf = "form.controls.number.errors.required" class="alert alert-danger">
-									El campo número de celular es requerido
-								</div>
-								<div *ngIf = "form.controls.number.errors.sinEspacios" class="alert alert-danger">
-									El nombre no debe contener espacios.
-								</div>
-							</div>
+					<p>
+						<i class="material-icons md-36 mdl-color-text--indigo">email</i>
+						<mdl-textfield
+							label="Email"
+							name="email"
+							type="text"
+							formControlName="email"
+							floating-label
+							pattern="^[a-z]+[a-z0-9._]+@[a-z]+\.[a-z.]{2,5}$"
+							error-msg="Por favor ingresa un email válido">
+						</mdl-textfield>
+					</p>
+					<div *ngIf = "form.controls.email.errors && form.controls.email.touched">
+						<div *ngIf = "form.controls.email.errors.required"  class="mdl-color-text--red">
+							El campo correo es requerido
 						</div>
 					</div>
-
-					<!-- Campo del mensaje -->
-					<div class="form-group">
-						<div class="md-form">
-							<i class="fa fa-pencil prefix"></i>
-							<textarea type="text" id="message" class="md-textarea" formControlName="message"></textarea>
-							<label for="message">Tu mensaje</label>
-							<div *ngIf = "form.controls.message.errors && form.controls.message.touched">
-								<div *ngIf = "form.controls.message.errors.required" class="alert alert-danger">
-									El campo del mensaje es requerido
-								</div>		
-								<div *ngIf = "form.controls.message.errors.maxlength" class="alert alert-danger">
-									El campo requiere maximo 250 caracteres
-								</div>
-							</div>
+					<p>
+						<i class="material-icons md-36 mdl-color-text--indigo">phone</i>
+						<mdl-textfield
+							type="text"
+							label="Número de celular"
+							formControlName="number"
+							name="number"
+							pattern="-?[0-9]*(\.[0-9]+)?"
+							error-msg="Por favor ingresa un número de celular válido"
+							floating-label>
+						</mdl-textfield>
+					</p>
+					<div *ngIf = "form.controls.number.errors && form.controls.number.touched">
+						<div *ngIf = "form.controls.number.errors.required" class="mdl-color-text--red">
+							El campo número de celular es requerido
 						</div>
 					</div>
-	
-				<!-- Boton de submit-->
-					<button class="btn indigo darken-4 flex-item waves-effect waves-light" [disabled]= "!form.valid">Enviar</button>
+					<p>
+						<i class="material-icons md-36 mdl-color-text--indigo">message</i>
+						<mdl-textfield 
+							label="Tu mensaje"
+							formControlName="message"
+							rows="2"
+							maxrows="3"
+							floating-label>
+						</mdl-textfield>
+					</p>
+					<div *ngIf = "form.controls.message.errors && form.controls.message.touched">
+						<div *ngIf = "form.controls.message.errors.required" class="mdl-color-text--red">
+							El campo del mensaje es requerido
+						</div>		
+					</div>
 				</form>
+				<button mdl-button mdl-button-type="raised" mdl-colored="primary" mdl-ripple [disabled]= "!form.valid">Enviar</button>
 			</div>
-    </div>
-		<!-- Parte derecha -->
-		<div class="col-md-3">
-			<!-- Icono de contacto -->
-			<div class="wow fadeInRightBig" data-wow-duration="1.5s">
-				<img  class="img-responsive" id="imgContacto" src="src/assets/img/contact/contactar1.png">	
+			<div class="mdl-cell mdl-cell--4-col">
+				<img src="src/assets/img/contact/contactar1.png">
 			</div>
 		</div>
 	</div>
