--- a/src/app/landing-page/content/contact/contact.component.scss
+++ b/src/app/landing-page/content/contact/contact.component.scss
@@ -1,30 +1,15 @@
 @import 'src/assets/sass/variables';
 
-.container {
-  margin-bottom: 20px;
-  z-index: 1;
-}
-
-.box {
-  border-radius: 3px;
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-  padding: 10px 25px;
-  text-align: left;
-  display: block;
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-
-.md-form .prefix.active{
-  color: $third-color;
-}
-
-
 .section-title {
-  margin: 1em auto;
+  margin-top: 1em;
 }
 
-#contactTitle{
-  margin-bottom: 1em;
-  margin-top: 0.5em;
+mdl-textfield{
+  width: 90%;
+  margin-left: 5px;
+}
+
+.parallax-content{
+  background-color: rgba(256,256,256,0.4);
+  border-radius: 10px;
 }
