--- a/src/app/landing-page/content/services/services.component.scss
+++ b/src/app/landing-page/content/services/services.component.scss
@@ -1,12 +1,12 @@
 @import 'src/assets/sass/variables';
-.container {
-  margin-bottom: 20px;
-  z-index: 1;
+
+.section-title{
+  margin-top: 1.5em;
 }
 
 .box {
   border-radius: 3px;
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.50), 0 2px 10px 0 rgba(0, 0, 0, 0.50);
   padding: 10px 25px;
   text-align: right;
   display: block;
@@ -15,14 +15,13 @@
 }
 
 .box-icon {
-  background-color: $accent-color;
   border-radius: 50%;
   display: table;
   height: 100px;
   margin: 0 auto;
   width: 100px;
   margin-top: -61px;
-  span {
+  i {
     color: #fff;
     display: table-cell;
     text-align: center;
@@ -39,21 +38,10 @@
   }
   > {
     p {
-      color: #717171;
+      color:rgba(0,0,0,0.87);
       font-size: 16px;
       padding-top: 10px;
       text-align: justify;
     }
-    a {
-      background-color: $third-color;
-      border-radius: 2px;
-      box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-      color: #fff;
-      transition: all 0.5s ease 0s;
-    }
   }
-}
-
-.section-title {
-  margin: 1em auto;
 }
