Fixed list styles

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,8 @@
       <mdl-layout-header>
          <mdl-layout-header-row>
             <mdl-layout-spacer></mdl-layout-spacer>
-                <img src="src/logo.png" id="profile-pic">
-                <a class="mdl-navigation__link logout" href="#" routerLink="/products"><i class="material-icons md-36 md-light">exit_to_app</i></a>
+                <img src="src/assets/img/duck.png" id="profile-pic">
+                <a class="mdl-navigation__link logout" href="#" routerLink="/"><i class="material-icons md-36 md-light">exit_to_app</i></a>
          </mdl-layout-header-row>
       </mdl-layout-header>
       <mdl-layout-drawer class="mdl-color--grey">
