--- a/src/app/retailers/retailers.component.html
+++ b/src/app/retailers/retailers.component.html
@@ -1,53 +1,34 @@
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-sm-3 col-lg-2">
-      <h2>Busqueda</h2>
-      <br/><br/>
-      <div class="container">
-        <form>
-          <div class="form-group">
-            <label>Nombre</label>
-            <input type="text">
-          </div>
-        </form>
-        <form>
-          <div class="form-group">
-            <label>Departamento</label>
-            <input type="text">
-          </div>
-        </form>
-        <form>
-          <div class="form-group">
-            <label>Calificacion</label>
-            <input type="text">
-          </div>
-        </form>
+<div class="mdl-grid">
+  <div class="mdl-cell mdl-cell--12-col">
+    <div class="mdl-grid">
+      <div class="form-group mdl-cell mdl-cell--4-col">
+        <mdl-textfield type="text" label="Nombre" floating-label></mdl-textfield>
       </div>
-
-    </div>
-
-    <div class="col-sm-9 col-lg-10">
-      <div class="container">
-        <div class="row">
-          <div class="col-xs-12 col-md-6 col-lg-4" *ngFor="let retailer of retailers">
-            <div class="card">
-              <div class="view overlay hm-white-slight">
-                <!--<img *ngSrc="https://static.pexels.com/photos/36003/duck-funny-soft-toy-toys.jpg" class="img-fluid" alt="">-->
-                <img src="{{retailer.photo.url}}" alt="">
-                <a href="#">
-                  <div class="mask"></div>
-                </a>
-              </div>
-              <div class="card-block">
-                <h4 class="card-title">Nombre :{{retailer.name}}</h4>
-                <p class="card-text">email : {{retailer.email}} <br> Celular : {{retailer.phoneNumber}}</p>
-
-              </div>
-            </div>
-          </div>
-        </div>
+      <div class="form-group mdl-cell mdl-cell--4-col">
+        <mdl-textfield type="text" label="Departamento" floating-label></mdl-textfield>
+      </div>
+      <div class="form-group mdl-cell mdl-cell--4-col">
+        <mdl-textfield type="text" label="Calificacion" floating-label></mdl-textfield>
       </div>
     </div>
+  </div>
+  <div class="mdl-cell mdl-cell--4-col" *ngFor="let retailer of retailers">
+    <mdl-card mdl-shadow="4">
+    <mdl-card-title [style.background-image]="getUrl(retailer.photo.url)">
+      <h2 mdl-card-title-text>{{retailer.name}}</h2>
+    </mdl-card-title>
+    <mdl-card-supporting-text>
+      <p class="card-text">{{retailer.email}} <br> {{retailer.phoneNumber}}</p>
+    </mdl-card-supporting-text>
+    <mdl-card-actions mdl-card-border>
+      <a href="/retailers/{{retailer.id}}" mdl-button mdl-colored mdl-ripple>Ver perfil</a>
+    </mdl-card-actions>
+    <mdl-card-menu>
+      <button mdl-button mdl-button-type="icon" mdl-ripple>
+        <mdl-icon>share</mdl-icon>
+      </button>
+    </mdl-card-menu>
+  </mdl-card>
   </div>
 </div>
 
