--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="location.path()!=''">
     <mdl-layout mdl-layout-fixed-header mdl-layout-fixed-drawer>
-      <mdl-layout-header>
+      <mdl-layout-header class="mdl-color--indigo-700">
          <mdl-layout-header-row>
             <mdl-layout-spacer></mdl-layout-spacer>
                 <img src="src/assets/img/duck.png" id="profile-pic">
