--- a/src/app/distributor-detail/distributor-detail.component.html
+++ b/src/app/distributor-detail/distributor-detail.component.html
@@ -1,56 +1,63 @@
-<div id="profile" class="container-fluid">
-  <div class="col-md-12">
-    <div class="row">
-      <div id="profile-banner" class="card z-depth-3">
-
-        <img class="img-fluid" id="background-image" src="src/assets/img/distributors/background.jpg" alt="background">
-        <img id="profile-img" src={{distributor.photo.url}} class="img-fluid z-depth-4" alt="profile image">
-
-        <div class="card-block container">
-          <div class="row">
-            <div class="col-sm-4">
-              <h4 class="card-title">{{distributor.name}}</h4>
-            </div>
-            <div class="col-sm-4">
-              <h4 class="card-title">Número de celular</h4>
-            </div>
-            <div class="col-sm-4">
-              <h4 class="card-title">Miembro desde</h4>
+<div id="profile" class="mdl-grid">
+  <div class="mdl-cell mdl-cell--12-col">
+    <mdl-card mdl-shadow="4" id="profile-banner">
+      <mdl-card-title>
+      </mdl-card-title>
+      <mdl-card-supporting-text>
+        <div class="mdl-grid">
+          <div class="mdl-cell mdl-cell--2-col">
+            <img id="profile-img" src={{distributor.photo.url}} class="img-fluid z-depth-4" alt="profile image">
+          </div>
+          <div class="mdl-cell mdl-cell--10-col">
+            <div class="mdl-grid">
+              <div class="mdl-cell mdl-cell--4-col">
+                <h4>{{distributor.name}}</h4>
+              </div>
+              <div class="mdl-cell mdl-cell--4-col">
+                <h4>Número de celular</h4>
+              </div>
+              <div class="mdl-cell mdl-cell--4-col">
+                <h4>Miembro desde</h4>
+              </div>
+              <div class="mdl-cell mdl-cell--4-col">
+                {{distributor.email}}
+              </div>
+              <div class="mdl-cell mdl-cell--4-col">
+                {{distributor.phoneNumber}}
+              </div>
+              <div class="mdl-cell mdl-cell--4-col">
+                AQUI DEBE IR LA FECHA
+              </div>
             </div>
           </div>
-          <div class="row">
-            <div class="col-sm-4">
-              <h5 class="grey-text">{{distributor.email}}</h5>
-            </div>
-            <div class="col-sm-4">
-              <h5 class="grey-text">{{distributor.phoneNumber}}</h5>
-            </div>
-            <div class="col-sm-4">
-              <h5 class="grey-text">{{distributor.created_at}}</h5>
-            </div>
-          </div>
         </div>
-      </div>
-    </div>
+      </mdl-card-supporting-text>
+      <mdl-card-menu>
+        <button mdl-button #btn1="mdlButton" (click)="m1.toggle($event, btn1)" mdl-button-type="icon" mdl-ripple><mdl-icon>more_vert</mdl-icon></button>
+        <mdl-menu #m1="mdlMenu" mdl-menu-position="bottom-right">
+           <mdl-menu-item mdl-ripple (click)="action()">Some Action</mdl-menu-item>
+           <mdl-menu-item mdl-ripple mdl-menu-item-full-bleed-divider>Another Action</mdl-menu-item>
+           <mdl-menu-item mdl-ripple disabled>Disabled Action</mdl-menu-item>
+           <mdl-menu-item>Yet Another Action</mdl-menu-item>
+        </mdl-menu>
+      </mdl-card-menu>
+    </mdl-card>
   </div>
-  <div id="profile-content" class="row">
-    <div class="col-md-5">
-      <div class="card z-depth-3">
-        <ng2-map id="map" center="{{distributor.latitude}} {{distributor.longitude}}" zoom="17" scrollwheel="false" >
-          <marker position="{{distributor.latitude}} {{distributor.longitude}}"></marker>
-        </ng2-map>
-        <div class="card-block container">
-          {{distributorAddress}}
-        </div>
-      </div>
-    </div>
-    <div class="col-md-7">
-      <div class="card z-depth-3">
-        <div class="card-block container">
-          ESTADISTICAS
-        </div>
-      </div>
-    </div>
+  <div class="mdl-cell mdl-cell--4-col">
+    <mdl-card mdl-shadow="4" id="map-card">
+    <mdl-card-title mdl-card-expand>
+      <ng2-map id="map" center="{{distributor.latitude}} {{distributor.longitude}}" zoom="17" scrollwheel="false" >
+        <marker position="{{distributor.latitude}} {{distributor.longitude}}"></marker>
+      </ng2-map>
+    </mdl-card-title>
+    <mdl-card-supporting-text>
+      {{distributorAddress}}
+    </mdl-card-supporting-text>
+    <mdl-card-menu>
+      <!--<button mdl-button mdl-button-type="icon" mdl-ripple>
+        <mdl-icon>share</mdl-icon>
+      </button>-->
+    </mdl-card-menu>
+  </mdl-card>
   </div>
-  <br>
 </div>
