--- a/src/app/distributor-detail/distributor-detail.component.scss
+++ b/src/app/distributor-detail/distributor-detail.component.scss
@@ -1,35 +1,41 @@
-#profile{
-  padding-top: 10vh;
-  overflow-x: hidden;
-}
-
-#map{
-  margin:auto;
-  width: 100%;
-}
-
 #profile-banner{
-  max-height: 45vh;
-  #background-image{
-    width: 100%;
-    height: 60%;
-    object-fit: cover;
+  width: 100%;
+  height: 40vmin;
+  mdl-card-title{
+    background-image: url('/src/assets/img/distributors/background.jpg');
+    background-size: cover;
+    height: 25vmin;
+  }
+  mdl-card-menu{
+    color: #FFF;
+  }
+  mdl-card-supporting-text{
+    margin-top: 0;
+    h4{
+      margin-top: 0;
+    }
   }
   #profile-img{
-    width: 120px;
-    height: 120px;
+    width: 8vmax;
+    height: 8vmax;
     object-fit: fill;
     border-radius: 50%;
     position: absolute;
-    top: 40%;
+    top: 37%;
     z-index: 150;
     left: 2%;
   }
-  .card-block{
-    left: 5%;
-  }
 }
 
-.row{
-  margin-bottom: 0;
+#map-card{
+  width: 100%;
+  mdl-card-title{
+    padding: 0;
+    width: 100%;
+    #map{
+      top: 0;
+      margin: 0 0;
+      width: 100%;
+    }
+  }
 }
