--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -1,24 +1,44 @@
-<div class="container">
-    <div class="row" *ngFor="let product of products1">
-    	<div class="col-md-6"> 
-    	   	<div class="card">
-          		<div class="view overlay hm-white-slight zoom_1">
-          			<h4 class="text-center cambiar_color"><strong>{{product.data.product.name}}</strong></h4>
-            		<img src="{{product.data.product.photo.url}}" class="img_product"alt=""> 
-          		</div>
-        	</div>
-    	</div>
-    	<div class="col-md-6">
-    		<h4 class="text-center cambiar_color">Producto : {{ product.data.product.name }}</h4>
-			<p class="card-text letra cambiar_color">Categoria : {{ product.data.product.category }}  </p>
-			<p class="card-title letra cambiar_color">Peso : {{product.data.product.weight }}</p>
-			<p class="card-title letra cambiar_color">Precio : ${{ product.data.price }}</p>
-			<p class="card-title letra cambiar_color">Distribuidor : {{ product.data.distributor.name }}</p>
-				
-			<a href="/distributors/{{product.data.distributor.id}}" title="Conoce al distribuidor!!"> 
-			<img src="{{product.data.distributor.photo.url}}" class="img_distribuidor view overlay hm-white-slight"alt="">  <div class="mask"></div>  </a>
+<div class="mdl-grid">
 
-    	</div>
-    </div>
+	   <div class="mdl-layout-spacer"></div>
+    <div class="mdl-cell mdl-cell--4-col">
+	<img src="{{data.product.photo.url}}" alt="">
+
+	<ul class='mdl-list'>
+		  	<li class="mdl-list__item">
+				    <span class="mdl-list__item-primary-content">
+					<i class="material-icons mdl-list__item-avatar">person</i>
+					<span>{{data.distributor.name}}</span>
+    				</span>
+					<a class="mdl-list__item-secondary-action" href="#"><i class="material-icons">star</i></a>
+			  </li>
+			<li class="mdl-list__item">
+				<span class="mdl-list__item-primary-content">
+					<i class="material-icons">list</i>
+					<span>Categoria: {{data.product.category}}</span>
+    				</span>
+			</li>
+			<li class="mdl-list__item">
+				<span class="mdl-list__item-primary-content">
+					<i class="material-icons ">attach_money</i>
+					<span>Precio: {{data.price | currency}}</span>
+    				</span>
+
+			</li>
+			<li class="mdl-list__item">
+				<span class="mdl-list__item-primary-content">
+					<i class="material-icons">bookmark</i>
+					<span>Peso: {{data.product.weight | number}}</span>
+    				</span>
+
+			</li>
+
+	</ul>
+
+
+	</div>
+	
+    <div class="mdl-layout-spacer"></div>
+
 </div>
 
