--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -17,15 +17,18 @@
                 |filterOfferedProductsPrice :filterprice ">
     <mdl-card mdl-shadow="4">
     <mdl-card-title [style.background-image]="getUrl(item.product.photo.url)">
+<!--        <img src="{{item.product.photo.url}}" class="md-card-image" alt="">-->
+
       <h2 mdl-card-title-text>{{item.product.name}}</h2>
     </mdl-card-title>
+
     <mdl-card-supporting-text>
       <p class="card-text">Categoria : {{item.product.category}}  </p>
       <p class="card-text">precio : {{item.price | currency}}  </p>
       <p class="card-text">Distribuidor: {{item.distributor.name}}</p>  
     </mdl-card-supporting-text>
     <mdl-card-actions mdl-card-border>
-      <a href="/products/{{item.product.id}}" mdl-button mdl-colored mdl-ripple>Ver producto</a>
+      <a href="/products/{{item.id}}"  mdl-button mdl-colored mdl-ripple>Ver producto</a>
     </mdl-card-actions>
     <mdl-card-menu>
       <button mdl-button mdl-button-type="icon" mdl-ripple>
