Minor changes to lists view

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
       <mdl-layout-header class="mdl-color--indigo-700">
          <mdl-layout-header-row>
             <mdl-layout-spacer></mdl-layout-spacer>
+                <a class="mdl-navigation__link logout" href="#" routerLink="/"><i class="material-icons md-36 md-light"  mdl-badge="1" mdl-badge-overlap>shopping_cart</i></a>
                 <img src="src/assets/img/duck.png" id="profile-pic">
                 <a class="mdl-navigation__link logout" href="#" routerLink="/"><i class="material-icons md-36 md-light">exit_to_app</i></a>
          </mdl-layout-header-row>
