--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -29,10 +29,11 @@
     </mdl-card-supporting-text>
     <mdl-card-actions mdl-card-border>
       <a href="/products/{{item.id}}"  mdl-button mdl-colored mdl-ripple>Ver producto</a>
+      <a href="/products/{{item.id}}"  mdl-button-type="raised" mdl-button mdl-colored="accent" mdl-ripple>Pedir</a>
     </mdl-card-actions>
     <mdl-card-menu>
       <button mdl-button mdl-button-type="icon" mdl-ripple>
-        <mdl-icon>share</mdl-icon>
+        <mdl-icon>more_vert</mdl-icon>
       </button>
     </mdl-card-menu>
   </mdl-card>
