--- a/src/app/retailers/retailers.component.html
+++ b/src/app/retailers/retailers.component.html
@@ -25,7 +25,7 @@
     </mdl-card-actions>
     <mdl-card-menu>
       <button mdl-button mdl-button-type="icon" mdl-ripple>
-        <mdl-icon>share</mdl-icon>
+        <mdl-icon>more_vert</mdl-icon>
       </button>
     </mdl-card-menu>
   </mdl-card>
